Fixed z-index issue.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -38,7 +38,7 @@ body {
 /* ------- Navigation Bar Formatting ------- */
 nav {
 	position: fixed;
-	z-index: 1000;
+	z-index: 2000;
 	width: 98vh;
 
 	margin: 0;
